src/objects/c2g__codaPrintFormat__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce Print Formatter.</description>
    <fields>
        <fullName>c2g__CmpCodeVocabId__c</fullName>
        <label>CmpCodeVocabId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FixedPosition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FixedPosition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__FooterHeight__c</fullName>
        <label>FooterHeight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__FormType__c</fullName>
        <label>FormType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__FormatCode__c</fullName>
        <label>FormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format</label>
        <referenceTo>c2g__codaFormatData__c</referenceTo>
        <relationshipLabel>Print Formats</relationshipLabel>
        <relationshipName>Print_Formats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GridOn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GridOn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__GridSizeX__c</fullName>
        <label>GridSizeX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__GridSizeY__c</fullName>
        <label>GridSizeY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HeaderHeight__c</fullName>
        <label>HeaderHeight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Locale__c</fullName>
        <label>Locale</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__MarginBottom__c</fullName>
        <label>MarginBottom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MarginLeft__c</fullName>
        <label>MarginLeft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MarginRight__c</fullName>
        <label>MarginRight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MarginTop__c</fullName>
        <label>MarginTop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Orientation__c</fullName>
        <label>Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>com_printformat_page_orientation_portrait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_page_orientation_landscape</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PFName__c</fullName>
        <label>PFName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PageHeight__c</fullName>
        <label>PageHeight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PageWidth__c</fullName>
        <label>PageWidth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaperSize__c</fullName>
        <label>PaperSize</label>
        <picklist>
            <picklistValues>
                <fullName>com_printformat_paper_size_a4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_paper_size_a3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_paper_size_a5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_paper_size_foolscap_folio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_paper_size_letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_paper_size_custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ShortName__c</fullName>
        <label>ShortName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Template__c</fullName>
        <label>Template</label>
        <picklist>
            <picklistValues>
                <fullName>com_printformat_template_yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_template_no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_template_protected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Uom__c</fullName>
        <label>Uom</label>
        <picklist>
            <picklistValues>
                <fullName>com_printformat_uom_cm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_uom_inch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UseFormat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseFormat</label>
        <type>Checkbox</type>
    </fields>
    <label>Print Format</label>
    <nameField>
        <label>Print Format Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>